ModeAccessParser improvements (#3026)
* include barriers properly; service=emergency_access; ferry access

* minor

* minor clean up

* simplify with toSet